@@ -1,19 +1,19 @@
 /**
  * This software was developed and / or modified by Raytheon Company,
  * pursuant to Contract DG133W-05-CQ-1067 with the US Government.
- * 
+ *
  * U.S. EXPORT CONTROLLED TECHNICAL DATA
  * This software product contains export-restricted data whose
  * export/transfer/disclosure is restricted by U.S. law. Dissemination
  * to non-U.S. persons whether in the United States or abroad requires
  * an export license or other authorization.
- * 
+ *
  * Contractor Name:        Raytheon Company
  * Contractor Address:     6825 Pine Street, Suite 340
  *                         Mail Stop B8
  *                         Omaha, NE 68106
  *                         402.291.0100
- * 
+ *
  * See the AWIPS II Master Rights File ("Master Rights File.pdf") for
  * further licensing information.
  **/
@@ -23,6 +23,7 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Map.Entry;
 
 import org.eclipse.ui.IWindowListener;
 import org.eclipse.ui.IWorkbench;
@@ -30,6 +31,7 @@ import org.eclipse.ui.IWorkbenchPage;
 import org.eclipse.ui.IWorkbenchWindow;
 import org.eclipse.ui.PlatformUI;
 
+import com.raytheon.uf.viz.core.IDisplayPane;
 import com.raytheon.uf.viz.core.IDisplayPaneContainer;
 import com.raytheon.uf.viz.core.VizConstants;
 import com.raytheon.uf.viz.core.datastructure.LoopProperties;
@@ -37,40 +39,41 @@ import com.raytheon.uf.viz.core.drawables.IRenderableDisplay;
 
 /**
  * Single frame count manager, updates the gui via eclipse command
- * 
+ *
  * <pre>
- * 
+ *
  * SOFTWARE HISTORY
  * Date         Ticket#    Engineer    Description
  * ------------ ---------- ----------- --------------------------
  * Oct 26, 2009            mschenke    Initial creation
  * Jul 16, 2013 2158       bsteffen    Allow VizGlobalsManager to work without
  *                                     accessing UI thread.
- * 
+ * Oct 03, 2022 8946       mapeters    Update for new combo editor, fix spelling
+ *                                     of getProperty()
+ *
  * </pre>
- * 
+ *
  * @author mschenke
- * @version 1.0
  */
-
 public class VizGlobalsManager {
 
-    private static Map<IWorkbenchWindow, VizGlobalsManager> instanceMap = new HashMap<IWorkbenchWindow, VizGlobalsManager>();
+    private static Map<IWorkbenchWindow, VizGlobalsManager> instanceMap = new HashMap<>();
 
     private Map<String, Object> globals;
 
     private IWorkbenchWindow window;
 
-    private static Map<String, List<IGlobalChangedListener>> listeners = new HashMap<String, List<IGlobalChangedListener>>();
+    private static Map<String, List<IGlobalChangedListener>> listeners = new HashMap<>();
 
     private static WorkbenchWindowListener windowListener = new WorkbenchWindowListener();
 
     private VizGlobalsManager(IWorkbenchWindow window) {
-        globals = new HashMap<String, Object>();
-        globals.put(VizConstants.FRAMES_ID, new Integer(12));
-        globals.put(VizConstants.SCALE_ID, "CONUS");
-        globals.put(VizConstants.DENSITY_ID, new Double(1.0));
-        globals.put(VizConstants.MAGNIFICATION_ID, new Double(1.0));
+        globals = new HashMap<>();
+        globals.put(VizConstants.FRAMES_ID, Integer.valueOf(12));
+        globals.put(VizConstants.MAP_SCALE_ID, "CONUS");
+        globals.put(VizConstants.HEIGHT_SCALE_ID, "Log 1050-150");
+        globals.put(VizConstants.DENSITY_ID, Double.valueOf(1.0));
+        globals.put(VizConstants.MAGNIFICATION_ID, Double.valueOf(1.0));
         this.window = window;
     }
 
@@ -99,7 +102,7 @@ public class VizGlobalsManager {
     /**
      * Must be called once during workbench startup to enable using globals for
      * the active window off the UI thread.
-     * 
+     *
      * @param workbench
      */
     public static void startForWorkbench(IWorkbench workbench) {
@@ -111,17 +114,18 @@ public class VizGlobalsManager {
     }
 
     public synchronized Map<String, Object> cloneGlobals() {
-        return new HashMap<String, Object>(globals);
+        return new HashMap<>(globals);
     }
 
-    public synchronized Object getPropery(String key) {
+    public synchronized Object getProperty(String key) {
         return globals.get(key);
     }
 
-    public static void addListener(String key, IGlobalChangedListener listener) {
+    public static void addListener(String key,
+            IGlobalChangedListener listener) {
         List<IGlobalChangedListener> list = listeners.get(key);
         if (list == null) {
-            list = new ArrayList<IGlobalChangedListener>();
+            list = new ArrayList<>();
             listeners.put(key, list);
         }
         list.add(listener);
@@ -136,15 +140,14 @@ public class VizGlobalsManager {
     }
 
     public synchronized void updateChanges(Map<String, Object> globalMap) {
-        for (String key : globalMap.keySet()) {
-            Object newValue = globalMap.get(key);
-            updateChange(key, newValue);
+        for (Entry<String, Object> entry : globalMap.entrySet()) {
+            updateChange(entry.getKey(), entry.getValue());
         }
     }
 
     public synchronized void updateChange(String key, Object newValue) {
         Object oldValue = globals.get(key);
-        if (newValue != null && newValue.equals(oldValue) == false) {
+        if (newValue != null && !newValue.equals(oldValue)) {
             globals.put(key, newValue);
             fireListeners(key, newValue);
         }
@@ -160,20 +163,21 @@ public class VizGlobalsManager {
     }
 
     /**
-     * Update the globals UI with the editor's active display pane
-     * 
+     * Update the globals UI with the editor's panes
+     *
      * @param editor
      */
     public void updateUI(IDisplayPaneContainer editor) {
-        if (editor != null && editor.getActiveDisplayPane() != null) {
-            updateUI(editor, editor.getActiveDisplayPane()
-                    .getRenderableDisplay());
+        if (editor != null) {
+            for (IDisplayPane canvas : editor.getMainCanvases()) {
+                updateUI(editor, canvas.getRenderableDisplay());
+            }
         }
     }
 
     /**
      * Update the UI with the display for the editor
-     * 
+     *
      * @param editor
      * @param display
      */
@@ -216,7 +220,7 @@ public class VizGlobalsManager {
 
         @Override
         public void windowDeactivated(IWorkbenchWindow window) {
-            ;
+
         }
 
         @Override
